kubernetes/services/overlays/prod/istio/admin-service-routing-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin-service-vs
spec:
  http:
    - match:
        - uri:
            prefix: /admin
      rewrite:
        uri: /
      route:
        - destination:
            host: admin-service
            subset: old
          weight: 100
        - destination:
            host: admin-service
            subset: new
          weight: 0
