kubernetes/services/overlays/prod/istio/app-service-routing-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-service-vs
spec:
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: app-service
            subset: old
          weight: 100
        - destination:
            host: app-service
            subset: new
          weight: 0
