kubernetes/services/overlays/prod/istio/auth-service-routing-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-service-vs
spec:
  http:
    - match:
        - uri:
            prefix: /auth-service
      route:
        - destination:
            host: auth-service
            subset: old
          weight: 50
        - destination:
            host: auth-service
            subset: new
          weight: 50
