kubernetes/services/overlays/prod/istio/old_new_subsets_destination_rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-service-dr
spec:
  host: auth-service
  subsets:
    - name: old
      labels:
        version: v1
    - name: new
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-service-dr
spec:
  host: user-service
  subsets:
    - name: old
      labels:
        version: v1
    - name: new
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: exam-service-dr
spec:
  host: exam-service
  subsets:
    - name: old
      labels:
        version: v1
    - name: new
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: msc-service-dr
spec:
  host: msc-service
  subsets:
    - name: old
      labels:
        version: v1
    - name: new
      labels:
        version: v2
