kubernetes/services/overlays/prod/istio/user-service-routing-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service-vs
spec:
  http:
    - match:
        - uri:
            prefix: /user-service
      route:
        - destination:
            host: user-service
            subset: old
          weight: 50
        - destination:
            host: user-service
            subset: new
          weight: 50
